[tool.poetry]
name = "venn"
version = "0.1.0"
description = "Work in multiple virtual environments simultaneously with ease."
authors = ["Payson Wallach <paysonwallach@icloud.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
cleo = "=0.6.8"
env = { git = "https://github.com/paysonwallach/env.git", tag = "0.1.2" }
virtualenvwrapper = "^4.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry.scripts]
venn = "venn.cli:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

