[tool.poetry]
name = "venn"
version = "0.2.0"
description = "Mix and match virtual environments."
authors = ["Payson Wallach <paysonwallach@icloud.com>"]
license = "HIP"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
cleo = "^0.7.6"
env = { git = "https://github.com/paysonwallach/env.git", tag = "0.1.2" }
virtualenvwrapper = "^4.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[tool.poetry.scripts]
venn = "venn.cli:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
